force-app/main/default/objects/Airparser_Field_Mapping__c/Airparser_Field_Mapping__c.object-meta.xml
<CustomObject>
    <label>Airparser Field Mapping</label>
    <nameField>
        <label>Mapping Name</label>
        <type>AutoNumber</type>
        <displayFormat>MAP-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Airparser Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>