force-app/main/default/objects/Airparser_Field_Mapping__c/fields/Airparser_Field__c.field-meta.xml
<CustomField>
    <fullName>Airparser_Field__c</fullName>
    <label>Airparser Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>