force-app/main/default/objects/Airparser_Field_Mapping__c/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <label>Target Field Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>