force-app/main/default/objects/Airparser_Field_Mapping__c/fields/Target_Section__c.field-meta.xml
<CustomField>
    <fullName>Target_Section__c</fullName>
    <label>Target Section</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Vendor 1</fullName><default>false</default><label>Vendor 1</label></value>
            <value><fullName>Vendor 2</fullName><default>false</default><label>Vendor 2</label></value>
            <value><fullName>Property</fullName><default>false</default><label>Property</label></value>
            <value><fullName>Agent</fullName><default>false</default><label>Agent</label></value>
            <value><fullName>Application</fullName><default>false</default><label>Application</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>